# intel-arc-llm-bench

./: LLAMA_SERVER.md  Makefile  README.md  SETUP.md  SIZING.md  XPU_STACK.md  pyproject.toml
benchmarks/: bench_llama_sweep.py  bench_sweep.py  benchmark_llama.py  benchmark_tokenizer.py  benchmark_tps.py  serve_common.py  serve_llama.py  serve_llama_native.py
results/: bench_results.csv  bench_results.md  llama_results.csv  llama_results.md  prompt_sweep.csv  prompt_sweep.md  tokenizer_results.md
tests/: test_chat.py  test_gpu.py  test_hf.py
utils/: check_access.py
vllm-docker/: .env.example  .gitignore  Makefile  README.md  client_example.py  docker-compose.dri.yml  docker-compose.wsl.yml  docker-compose.yml  gpu-check.sh
vllm-docker/patches/: sitecustomize.py
