[project]
name = "intel-arc-llm-bench"
version = "0.1.0"
description = "LLM inference benchmarks on Intel Arc / XPU (PyTorch + transformers)"
readme = "README.md"
requires-python = ">=3.13,<3.14"
# Force uv to evaluate Triton as a top-level requirement
dependencies = [
    "accelerate>=1.13.0",
    "gradio>=6.14.0",
    "python-dotenv>=1.2.2",
    "torch>=2.12.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.27.0",
    "transformers>=5.9.0",
    "triton-xpu==3.7.1",
]

[tool.uv]
# 1. This tells uv to build an app-sandbox, ignoring PEP 517 build-backends
managed = true
package = false
environments = ["sys_platform == 'linux' and platform_machine == 'x86_64'"]

[[tool.uv.index]]
name = "pytorch-xpu"
url = "https://download.pytorch.org/whl/xpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-xpu" }
torchvision = { index = "pytorch-xpu" }
torchaudio = { index = "pytorch-xpu" }
# Tell uv to look on the Intel index for their custom Triton packages too!
triton-xpu = { index = "pytorch-xpu" }
pytorch-triton-xpu = { index = "pytorch-xpu" }
